--- a/AlAzar.xaml
+++ b/AlAzar.xaml
@@ -5,19 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoterestTcs"
         mc:Ignorable="d"
-        Title="LOTEREST - Al azar" Height="658" Width="1290" Icon="/LoterestTcs;component/Recursos/logoLoterest.png" WindowStartupLocation="CenterScreen" WindowState="Minimized" >
+        Title="LOTEREST - Al azar" Height="658" Width="1290" Icon="/LoterestTcs;component/Recursos/logoLoterest.png" WindowStartupLocation="CenterScreen" WindowState="Maximized" >
     <Window.Background>
         <ImageBrush ImageSource="/LoterestTcs;component/Recursos/fondoPrincipal.png"/>
     </Window.Background>
     <Grid>
         <Image HorizontalAlignment="Left" Height="100" Margin="1173,466,0,0" VerticalAlignment="Top" Width="100" Source="/LoterestTcs;component/Recursos/logoLoterest.png"/>
         <Image HorizontalAlignment="Left" Height="340" Margin="539,69,0,0" VerticalAlignment="Top" Width="218" Source="/LoterestTcs;component/Cartas/04Laptop.png"/>
-        <Label Content="Carta saliente:" HorizontalAlignment="Left" Margin="568,29,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="24"/>
-        <Label Content="Puntaje:" HorizontalAlignment="Left" Margin="970,57,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="48" RenderTransformOrigin="6.062,-8.32"/>
+        <Label Content="{DynamicResource ResourceKey=Carta}" HorizontalAlignment="Left" Margin="568,29,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="24"/>
         <Image HorizontalAlignment="Left" Height="240" Margin="177,368,0,0" VerticalAlignment="Top" Width="172" Source="/LoterestTcs;component/Cartas/02Mochila.png" RenderTransformOrigin="2.057,0.603"/>
-        <Label Content="Carta que elegiste:" HorizontalAlignment="Left" Margin="177,323,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="24"/>
+        <Label Content="{DynamicResource ResourceKey=CartaElegida}" HorizontalAlignment="Left" Margin="177,323,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="24"/>
         <Image HorizontalAlignment="Left" Height="177" Margin="177,110,0,0" VerticalAlignment="Top" Width="189" Source="/LoterestTcs;component/Recursos/dado6.png"/>
-        <Label Content="Número:" HorizontalAlignment="Left" Margin="177,57,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="36" RenderTransformOrigin="6.062,-8.32"/>
+        <Label Content="{DynamicResource ResourceKey=Numero}" HorizontalAlignment="Left" Margin="177,57,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="36" RenderTransformOrigin="6.062,-8.32"/>
         <Image HorizontalAlignment="Left" Height="535" Margin="0,42,0,0" VerticalAlignment="Top" Width="1273" Source="/LoterestTcs;component/Recursos/EnConstruccion.png"/>
         <Button x:Name="RegresarButton" Content="" HorizontalAlignment="Left" Margin="40,40,0,0" VerticalAlignment="Top" Width="70" Height="70" BorderBrush="{x:Null}" Foreground="{x:Null}" RenderTransformOrigin="0.028,0.087" Click="RegresarButton_Click">
             <Button.Background>
