--- a/EnviarInvitacion.xaml
+++ b/EnviarInvitacion.xaml
@@ -10,22 +10,26 @@
         <ImageBrush ImageSource="/LoterestTcs;component/Recursos/fondoPrincipal.png"/>
     </Window.Background>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1225*"/>
+            <ColumnDefinition Width="58*"/>
+        </Grid.ColumnDefinitions>
         <Image HorizontalAlignment="Left" Height="360" Margin="172,110,0,0" VerticalAlignment="Top" Width="243" Source="/LoterestTcs;component/Recursos/logoLoterest.png" RenderTransformOrigin="0.359,0.394"/>
         <Rectangle HorizontalAlignment="Left" Height="415" Margin="557,83,0,0" VerticalAlignment="Top" Width="376">
             <Rectangle.Fill>
                 <SolidColorBrush Color="Black" Opacity="0.46"/>
             </Rectangle.Fill>
         </Rectangle>
-        <Image Grid.Column="0" HorizontalAlignment="Left" Height="411" Margin="1105,219,0,-1.333" VerticalAlignment="Top" Width="178" Source="/LoterestTcs;component/Recursos/cartasFondo.png"/>
-        <Label Content="ENVIAR INVITACIÓN" HorizontalAlignment="Left" Margin="596,123,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="36" Width="303" Height="67" TextOptions.TextHintingMode="Fixed" RenderTransformOrigin="0.439,0.495"/>
-        <Label Content="Ingresa el nombre de usuario &#xD;&#xA;de un amigo con el que deseas &#xD;&#xA;jugar aquí:" HorizontalAlignment="Left" Margin="629,219,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="16" FontWeight="ExtraBold" Width="251"/>
+        <Image Grid.Column="0" HorizontalAlignment="Left" Height="411" Margin="1105,219,0,-1.333" VerticalAlignment="Top" Width="178" Source="/LoterestTcs;component/Recursos/cartasFondo.png" Grid.ColumnSpan="2"/>
+        <Label Content="{DynamicResource ResourceKey=EnviarInvitacion}" HorizontalAlignment="Left" Margin="596,123,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Calibri Light" FontSize="36" Width="303" Height="67" TextOptions.TextHintingMode="Fixed" RenderTransformOrigin="0.439,0.495"/>
         <TextBox x:Name="InvitacionTextBox" HorizontalAlignment="Left" Height="38" Margin="637,312,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="220" FontFamily="Calibri Light" FontSize="18" Foreground="#FF04547C" TextAlignment="Center"/>
-        <Button x:Name="ContinuarButton" Content="Continuar" HorizontalAlignment="Left" Margin="755,413,0,0" VerticalAlignment="Top" Width="99" Height="31" FontFamily="Calibri Light" FontSize="14" Background="White" BorderBrush="White" Click="ContinuarButton_Click" Foreground="#FF04547C"/>
-        <Button x:Name="CancelarButton" Content="Cancelar" HorizontalAlignment="Left" Margin="634,413,0,0" VerticalAlignment="Top" Width="99" Height="31" FontFamily="Calibri Light" FontSize="14" Background="#FF04547C" BorderBrush="White" Click="CancelarButton_Click">
+        <Button x:Name="ContinuarButton" Content="{DynamicResource ResourceKey=Continuar}" HorizontalAlignment="Left" Margin="755,413,0,0" VerticalAlignment="Top" Width="99" Height="31" FontFamily="Calibri Light" FontSize="14" Background="White" BorderBrush="White" Click="ContinuarButton_Click" Foreground="#FF04547C"/>
+        <Button x:Name="CancelarButton" Content="{DynamicResource ResourceKey=Cancelar}" HorizontalAlignment="Left" Margin="634,413,0,0" VerticalAlignment="Top" Width="99" Height="31" FontFamily="Calibri Light" FontSize="14" Background="#FF04547C" BorderBrush="White" Click="CancelarButton_Click">
             <Button.Foreground>
                 <SolidColorBrush Color="White" Opacity="0.7"/>
             </Button.Foreground>
         </Button>
+        <TextBlock HorizontalAlignment="Left" Height="47" Margin="603,232,0,0" TextWrapping="Wrap" Text="{DynamicResource ResourceKey=Invitacion}" VerticalAlignment="Top" Width="296" TextAlignment="Justify" RenderTransformOrigin="2.443,-1.722" Foreground="White" FontFamily="Calibri Light" FontSize="16"/>
 
     </Grid>
 </Window>
